# DeepSearchAgent

./: .gitignore  .gitmodules  README.md
backend/: .env.example  config.yaml  config.yaml.example  main.py  pyproject.toml  table_ddl.sql  todo.md
backend/config/: loader.py  models.py
backend/db/: README.md  database.py  db_models.py  redis.py  standalone_embed.sh  start_db.sh  stop_db.sh  table_ddl.sql
backend/mineru/: Dockerfile  compose.yaml  pyproject.toml  start_all.sh  stop_all.sh
backend/mineru/mineru.egg-info/: PKG-INFO  requires.txt
backend/mineru/mineru/backend/vlm/: vlm_analyze.py
backend/models/: start_tei_server.sh
backend/routes/: __init__.py  auth.py  knowledge.py  schema.py  sessions.py  system.py  utils.py
backend/services/: auth_service.py  http_client.py  knowledge_service.py  session_service.py
backend/services/agent/: __init__.py
backend/services/parsers/: base.py  csv_parser.py  markdown_parser.py  pdf_parser.py
backend/work_flow/: graph.py  node.py  process.py  run_workflow.py  search_process.drawio  search_process.md  state.py
backend/work_flow/agent/: __init__.py  prompt.py
frontend/: .env  eslint.config.js  package-lock.json  package.json  todo.md
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: BasicInfo.jsx  DeleteNotification.css  KnowledgeBase.jsx  Login.css  Login.jsx  LoginButton.css  LongTermMemory.jsx  ProfileSidebar.jsx  SearchPage.css  SearchPage.jsx  UserProfile.jsx
frontend/src/utils/: errorHandler.example.js  errorHandler.js
